Spacing contactpage & button-fix op homepage

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,17 @@ footer a:hover {
     .textbox-btn {
         margin: 0 auto;
     }
+
+    #interesse {
+        display: block;
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width: 991px) {
+    #interesse {
+        display: flex;
+    }
 }
 
 /* CONTACT */
@@ -153,6 +164,7 @@ footer a:hover {
 #form-input, #form-area {
     box-shadow: none !important;
     border-radius: 0;
+    resize: none;
 }
 
 #form-input:focus, #form-area:focus {
